# pafcheck

./: Cargo.toml
src/: fasta_reader.rs  main.rs  paf_parser.rs  validator.rs
tests/: integration_tests.rs  validation_tests.rs
