[package]
name = "pafcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.2"
anyhow = "1.0"
tempfile = "3.2"
thiserror = "1.0"

rust-htslib = { version = "0.46.0", default-features = false } # Don't update it, see https://github.com/rust-bio/rust-htslib/issues/434
libc = "0.2.172"

[dev-dependencies]
